Complete overhaul of rendering and input in progress